# SimpleDeviceModule

./: .gitignore  CMakeLists.txt  README.md
.github/actions/: README.md
.github/actions/framework-download/: README.md  action.yml
.github/actions/framework-install/: README.md  action.yml
.github/actions/framework-latest-release/: README.md  action.yml
.github/actions/module-build-test/: action.yml
.github/actions/opendaq-download-github/: action.yml
.github/actions/opendaq-github-download-artifact/: action.yml
.github/actions/opendaq-github-download-release/: action.yml  action.yml.autosave
.github/workflows/: README.md  build-tests.yml  ci-framework.yml  ci.md  ci.yml
example_module/include/example_module/: example_channel.h  example_device.h
example_module/src/: CMakeLists.txt  example_channel.cpp  example_device.cpp
example_module/tests/: CMakeLists.txt  test_app.cpp  test_example_module.cpp
server_application/: CMakeLists.txt  main.cpp
